# micro-controller-playground

./: .gitignore  read_port.py
c-examples/camera/: CMakeLists.txt  sdkconfig.old
c-examples/esp-iot-solutions-cam-usb-face-detection/: CMakeLists.txt  README.md  custom_partition.csv  sdkconfig
c-examples/esp-iot-solutions-cam-usb-face-detection/components/esp_timer/: CMakeLists.txt
c-examples/esp-iot-solutions-cam-usb-face-detection/components/esp_timer/include/: esp_etm.h
c-examples/esp-iot-solutions-cam-usb-face-detection/components/modules/: CMakeLists.txt
c-examples/esp-iot-solutions-cam-usb-sd/: sdkconfig  sdkconfig.old
c-examples/esp32-s3-seeed-hand-recognition/: README.md  sdkconfig  sdkconfig.defaults.esp32s3
c-examples/sdspi/: sdkconfig  sdkconfig.old
c-examples/web-server/: CMakeLists.txt  sdkconfig.old
ino-examples/: cam-webserver.ino
ino-examples/CameraWebServer/: CameraWebServer.ino  app_httpd.cpp  camera_pins.h
ino-examples/MCUv2_vl53l8cx/: MCUv2_vl53l8cx.ino
ino-examples/SimpleCameraWebserver/: SimpleCameraWebserver.ino
ino-examples/ToF/: ToF.ino
ino-examples/acc_data_collector/: acc_data_collector.ino
ino-examples/dual_core/: dual_core.ino
ino-examples/lora-direct/: lora-direct_v2.ino
ino-examples/rplidar/: rplidar.ino
ino-examples/tof_detector/: arduino_vl53l8cx_handler.cpp  maneuver_predictor.cpp  tof_detector.ino  tof_detector_model_data.cpp  (+1 more)
proc-examples/: SparkFun_VL53L5CX_3D_Depth_Map.pde
python-examples/: record_webcam.py  vis_verkehrskontrolle.py
r-scripts/: calc-resistor-nano-power-switch.R
(+39 files in other folders)
